# touchlib

./: README
multitouch/: CMakeLists.txt
multitouch/3rd party/DirectShow/lib/: strmbasd.lib  strmbase.lib
multitouch/3rd party/OpenCV/otherlibs/highgui/: Makefile.am  Makefile.in  _highgui.h  bitstrm.cpp  cvcap.cpp  cvcap_cmu.cpp  cvcap_v4l.cpp  cvcap_vfw.cpp  grfmt_jpeg.cpp  grfmt_png.cpp  grfmt_pxm.cpp  grfmt_tiff.cpp  highgui.dsp  highgui.h  highgui.rc  highgui.sln  highgui.vcproj  loadsave.cpp  makefile.ms  utils.h  window_gtk.cpp  window_w32.cpp
multitouch/demos/: CMakeLists.txt
multitouch/demos/osc/: CMakeLists.txt  osc.cpp
multitouch/demos/pong/: pong.cpp
multitouch/demos/smoke/: CMakeLists.txt  fluid2d.cc  fluid2d.h  glutApplication.cc  glutApplication.h  glutMaster.h  main.cc
multitouch/flashSrc/: Flickr.as  Paint.fla  Photo.as  Photo.fla  PhotoCanvas.as  Ripples.fla  RotatableScalable.as  TUIO.as  usage.txt
multitouch/flashSrc/whitenoise/: TUIO.as
multitouch/include/: BackgroundFilter.h  BrightnessContrastFilter.h  CBlobTracker.h  CCapture.h  CTouchScreen.h  CaptureFilter.h  CvCaptureFilter.h  DSVLCaptureFilter.h  DsCaptureFilter.h  FilterFactory.h  HighpassFilter.h  ICapture.h  ITouchEvent.h  ITouchEventListener.h  ITouchListener.h  ITouchScreen.h  Image.h  MonoFilter.h  RectifyFilter.h  ResizeFilter.h  SmoothingFilter.h  TouchData.h  TouchScreenDevice.h  VideoWrapperFilter.h  filter.h  filterbrightnesscontrast.h  glut.h  mesh2d.h  rect2d.h  textures.h  touchlib_platform.h  utilities.h  vector2d.h
multitouch/lib/: OscpackLib.lib  touchlib.lib  touchlibd.lib
multitouch/src/: BackgroundFilter.cpp  BrightnessContrastFilter.cpp  CBlobTracker.cpp  CMakeLists.txt  CTouchScreen.cpp  CaptureFilter.cpp  CvCaptureFilter.cpp  FilterFactory.cpp  HighpassFilter.cpp  RectifyFilter.cpp  ScalerFilter.cpp  SmoothingFilter.cpp  TouchScreenDevice.cpp  VideoWrapperFilter.cpp  configapp.cpp  filter.cpp  mousedriver.cpp  sampleapp.cpp  textures.cpp  touchtest.cpp
wiki/: codestyle.wiki
