project(touchlib)
INCLUDE(UsePkgConfig)
PKGCONFIG(opencv OPENCV_INC OPENCV_LINKDIR OPENCV_LDFLAGS OPENCV_CFLAGS)
IF(NOT OPENCV_INC)
	MESSAGE(FATAL_ERROR "OpenCV pkg not found")
ENDIF(NOT OPENCV_INC)
INCLUDE_DIRECTORIES(${OPENCV_INC} include tinyxml)
add_subdirectory (tinyxml)
add_subdirectory (src)
