IF(OSC_INCLUDE_DIR AND OSC_LIBRARIES)
	INCLUDE_DIRECTORIES(${OSC_INCLUDE_DIR})
	ADD_EXECUTABLE(osc osc.cpp)
	TARGET_LINK_LIBRARIES(osc touchlib tinyxml ${OSC_LIBRARIES})
	SET_TARGET_PROPERTIES(osc
			PROPERTIES LINK_FLAGS ${OPENCV_LINKDIR} LINK_FLAGS ${OPENCV_LDFLAGS})
ENDIF(OSC_INCLUDE_DIR AND OSC_LIBRARIES)