IF(FFTW_INCLUDE_DIR AND FFTW_LIBRARIES AND RFFTW_LIBRARIES)
	INCLUDE_DIRECTORIES(${FFTW_INCLUDE_DIR})
	ADD_EXECUTABLE(smoke fluid2d.cc glutApplication.cc glutMaster.cc glutWindow.cc main.cc)
	TARGET_LINK_LIBRARIES(smoke touchlib tinyxml ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${FFTW_LIBRARIES} ${RFFTW_LIBRARIES})
	SET_TARGET_PROPERTIES(smoke
			PROPERTIES LINK_FLAGS ${OPENCV_LINKDIR} LINK_FLAGS ${OPENCV_LDFLAGS})
ENDIF(FFTW_INCLUDE_DIR AND FFTW_LIBRARIES AND RFFTW_LIBRARIES)